# async-dynamodb

./: .env  .gitignore  Makefile  README.md  make.bat  pyproject.toml
src/my_app/: dynamodb.py  main.py
tests/: test_main.py
